@@ -142,6 +142,9 @@ public class HttpServer
         if (config.getMaxRequestHeaderSize() != null) {
             baseHttpConfiguration.setRequestHeaderSize(toIntExact(config.getMaxRequestHeaderSize().toBytes()));
         }
+        if (config.getMaxResponseHeaderSize() != null) {
+            baseHttpConfiguration.setResponseHeaderSize(toIntExact(config.getMaxResponseHeaderSize().toBytes()));
+        }
 
         // disable async error notifications to work around https://github.com/jersey/jersey/issues/3691
         baseHttpConfiguration.setNotifyRemoteAsyncErrors(false);
