@@ -74,6 +74,7 @@ public class TestHttpServerConfig
                 .setAdminMinThreads(2)
                 .setAdminMaxThreads(200)
                 .setMaxRequestHeaderSize(null)
+                .setMaxResponseHeaderSize(null)
                 .setHttp2MaxConcurrentStreams(16384)
                 .setShowStackTrace(true)
                 .setHttp2InitialSessionReceiveWindowSize(new DataSize(16, MEGABYTE))
@@ -121,6 +122,7 @@ public class TestHttpServerConfig
                 .put("http-server.admin.threads.min", "3")
                 .put("http-server.admin.threads.max", "4")
                 .put("http-server.max-request-header-size", "32kB")
+                .put("http-server.max-response-header-size", "57kB")
                 .put("http-server.http2.max-concurrent-streams", "1234")
                 .put("http-server.show-stack-trace", "false")
                 .put("http-server.http2.session-receive-window-size", "4MB")
@@ -160,6 +162,7 @@ public class TestHttpServerConfig
                 .setThreadMaxIdleTime(new Duration(10, MINUTES))
                 .setNetworkMaxIdleTime(new Duration(20, MINUTES))
                 .setMaxRequestHeaderSize(new DataSize(32, KILOBYTE))
+                .setMaxResponseHeaderSize(new DataSize(57, KILOBYTE))
                 .setUserAuthFile("/auth")
                 .setAdminEnabled(false)
                 .setAdminPort(3)
